Update Score Header

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
@@ -17,7 +18,7 @@
                 <button onclick="newGame()">New Game</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 class="score" id="increment-score-guest">0</h2>
                 <div class="increment">
                     <button onclick="guestPointOne()">+1</button>
